[package]
name    = "vrypt-server"
version = "2.0.0"
edition = "2021"

[dependencies]
mio     = { version = "1.0", features = ["net", "os-poll"] }
socket2 = { version = "0.5", features = ["all"] }

[profile.release]
opt-level      = 3
lto            = "fat"
codegen-units  = 1
panic          = "abort"
strip          = true
